--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -149,6 +149,22 @@ body {
     min-height: 20em;
   }
 
+  @keyframes flash {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0.3;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  .flash {
+    animation: flash 0.3s ease;
+  }
+
   @mixin pressedEffect($color) {
     color: lighten($color, 10%);
     border: 0.05em solid transparentize(darken($color, 20%), 0.5);
@@ -159,7 +175,7 @@ body {
   }
 
   .pressed {
-    transform: scale(0.90);
+    transform: scale(0.9);
     filter: brightness(1.2);
     transition: all 0.1s ease;
   }
